# ClockAnimation-

./: README.md
ClockFace/: CMakeLists.txt  Main.qml  main.cpp
